deploy/argocd/apps/neuvector/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: neuvector
  labels:
    name: neuvector
